--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/tufte.css">
-<link rel="stylesheet" href="/css/latex.css">
-<link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+  <link rel="stylesheet" href="https://technocrat.site//refounded//css/franklin.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/tufte.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/latex.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
+<link rel="icon" href="https://technocrat.site//refounded//assets/favicon.png">
 
    <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
@@ -22,29 +22,28 @@
 <div id="layout">
   <div id="menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/common/">Commonalities</a></li>
-      <li><a href="/concord/">Concordia</a></li>
-      <li><a href="/metro/">Metropolis</a></li>
-      <li><a href="/factor/">Factoria</a></li>
-      <li><a href="/lonestar/">The Lone Star Republic</a></li>
-      <li><a href="/dixie/">New Dixie</a></li>
-      <li><a href="/cumber/">Cumberland</a></li>
-      <li><a href="/heart/">Heartlandia</a></li>
-      <li><a href="/desert/">Deseret</a></li>
-      <li><a href="/sonora/">New Sonora</a></li>
-      <li><a href="/pacific/">Pacifica</a></li>
-      <li><a href="/alter/">Alternatives</a></li>
+      <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
+      <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
+      <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
+      <li><a href="https://technocrat.site/refounded/factor/">Factoria</a></li>
+      <li><a href="https://technocrat.site/refounded/lonestar/">The Lone Star Republi</a></li>
+      <li><a href="https://technocrat.site/refounded/dixie/">New Dixie</a></li>
+      <li><a href="https://technocrat.site/refounded/cumber/">Cumberland</a></li>
+      <li><a href="https://technocrat.site/refounded/heart/">Heartlandia</a></li>
+      <li><a href="https://technocrat.site/refounded/desert/">Deseret</a></li>
+      <li><a href="https://technocrat.site/refounded/sonora/">New Sonora</a></li>
+      <li><a href="https://technocrat.site/refounded/pacific/">Pacifica</a></li>
+      <li><a href="https://technocrat.site/refounded/alter/">Alternatives</a></li>
     </ul>
   </div>
-  <div id="main">
+<div id="main">
     
 
 
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="concordia"><a href="#concordia" class="header-anchor">Concordia</a></h1>
-<div class="marginnote"><img src="/img/concord.png" style="width: 100%; display: block;"></div>
-<p>All of Concordia lies within 200 miles of Boston except for northeastern Maine, which is sparsely settled. It is bordered by Quebec, Canada on the north and by New Brunswick, Canada on the east. It borders New York on the west and south. Approximately 75&#37; of the region is forested.</p>
+<div class="marginnote"><img src="https://technocrat.site/refounded/img/concord.png" style="width: 100%; display: block;"></div>
 
 <iframe 
 	src="https://njal.s3.us-west-2.amazonaws.com/Boston.html" 
@@ -55,6 +54,7 @@
 	scrolling="yes">
 </iframe>
 
+<p>All of Concordia lies within 200 miles of Boston except for northeastern Maine, which is sparsely settled. It is bordered by Quebec, Canada on the north and by New Brunswick, Canada on the east. It borders New York on the west and south. Approximately 75&#37; of the region is forested.</p>
 <h2 id="population"><a href="#population" class="header-anchor">Population</a></h2>
 <p>Concordia is home to approximately 15.1 million in the six states of Connecticut, New Hampshire, Maine, Massachusetts, Rhode Island and Vermont. As a single state, it would be the fifth largest, behind New York and ahead of Pennsylvania. It has about 4.5&#37; of the total population of the United States.</p>
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
@@ -93,7 +93,7 @@
 	
 
 <p>Its population is concentrated along the Northeast Corridor from Boston to New York. Massachusetts has a population size similar to Indiana and Tennessee. Connecticut falls between Utah and Oklahoma. Maine and New Hampshire are both comparable to Hawaii. Rhode Island has the approximate population of Delaware and Montana. Vermont has a larger population than Wyoming and a smaller population than the District of Columbia.</p>
-<p><img src="/img/concord_night.png" alt="Concordia at night" /></p>
+<p><img src="https://technocrat.site/refounded/img/concord_night.png" alt="Concordia at night" /></p>
 <p>The following table shows the population of Concordia in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -193,7 +193,7 @@
 	 
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
-<p><img src="/img/Concordia_Age_Pyramid.png" alt="Concordia regional age pyramid" /></p>
+<p><img src="https://technocrat.site/refounded/img/Concordia_Age_Pyramid.png" alt="Concordia regional age pyramid" /></p>
 <p>Compared to the United States as a whole, Concordia has a younger population, although that varies by state.</p>
 <p><img src="/img/concordia_state_ages.png" alt="Concordia state age pyramids" /></p>
 <p>The age distribution differences are reflected in the dependency ratios for the  Concordia states.</p>
@@ -617,7 +617,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 14, 2025.
+     Richard Careaga. Last modified: March 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
