--- a/__site/desert/index.html
+++ b/__site/desert/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/tufte.css">
-<link rel="stylesheet" href="/css/latex.css">
-<link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+  <link rel="stylesheet" href="https://technocrat.site//refounded//css/franklin.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/tufte.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/latex.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
+<link rel="icon" href="https://technocrat.site//refounded//assets/favicon.png">
 
    <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
@@ -22,28 +22,28 @@
 <div id="layout">
   <div id="menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/common/">Commonalities</a></li>
-      <li><a href="/concord/">Concordia</a></li>
-      <li><a href="/metro/">Metropolis</a></li>
-      <li><a href="/factor/">Factoria</a></li>
-      <li><a href="/lonestar/">The Lone Star Republic</a></li>
-      <li><a href="/dixie/">New Dixie</a></li>
-      <li><a href="/cumber/">Cumberland</a></li>
-      <li><a href="/heart/">Heartlandia</a></li>
-      <li><a href="/desert/">Deseret</a></li>
-      <li><a href="/sonora/">New Sonora</a></li>
-      <li><a href="/pacific/">Pacifica</a></li>
-      <li><a href="/alter/">Alternatives</a></li>
+      <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
+      <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
+      <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
+      <li><a href="https://technocrat.site/refounded/factor/">Factoria</a></li>
+      <li><a href="https://technocrat.site/refounded/lonestar/">The Lone Star Republi</a></li>
+      <li><a href="https://technocrat.site/refounded/dixie/">New Dixie</a></li>
+      <li><a href="https://technocrat.site/refounded/cumber/">Cumberland</a></li>
+      <li><a href="https://technocrat.site/refounded/heart/">Heartlandia</a></li>
+      <li><a href="https://technocrat.site/refounded/desert/">Deseret</a></li>
+      <li><a href="https://technocrat.site/refounded/sonora/">New Sonora</a></li>
+      <li><a href="https://technocrat.site/refounded/pacific/">Pacifica</a></li>
+      <li><a href="https://technocrat.site/refounded/alter/">Alternatives</a></li>
     </ul>
   </div>
-  <div id="main">
+<div id="main">
     
 
 
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="deseret"><a href="#deseret" class="header-anchor">Deseret</a></h1>
-<div class="marginnote"><img src="/img/desert.png" style="width: 100%; display: block;"></div>
+<div class="marginnote"><img src="https://technocrat.site/refounded/img/desert.png" style="width: 100%; display: block;"></div>
 
 <iframe 
 	src="https://njal.s3.us-west-2.amazonaws.com/Salt%20Lake%20City.html" 
@@ -89,7 +89,7 @@
 	
 
 <p>Colorado has a population size that lies between Minnesota and Wisconsin. Utah&#39;s population lies between Iowa and Connecticut. Idaho and Montana each lie between Rhode Island and Nebraska. As a single state, it would rank sixth, between Illinois and Pennsylvania.</p>
-<p><img src="/img/desert_at_night.png" alt="Deseret at night" /></p>
+<p><img src="https://technocrat.site/refounded/img/desert_at_night.png" alt="Deseret at night" /></p>
 <p>The following table shows the population of Deseret in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -189,9 +189,9 @@
 	 
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
-<p><img src="/img/Deseret_Age_Pyramid.png" alt="Deseret regional age pyramid" /></p>
+<p><img src="https://technocrat.site/refounded/img/Deseret_Age_Pyramid.png" alt="Deseret regional age pyramid" /></p>
 <p>Compared to the United States as a whole, Deserest has a younger population, although that varies by state.</p>
-<p><img src="/img/Deseret_states_age_pyramids.png" alt="Deseret state age pyramids" /></p>
+<p><img src="https://technocrat.site/refounded/img/Deseret_states_age_pyramids.png" alt="Deseret state age pyramids" /></p>
 <p>The age distribution differences are reflected in the dependency ratios for the Deseret states.</p>
 
 <table class="tufte-table">
@@ -514,7 +514,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 15, 2025.
+     Richard Careaga. Last modified: March 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
