--- a/__site/factor/index.html
+++ b/__site/factor/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/tufte.css">
-<link rel="stylesheet" href="/css/latex.css">
-<link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+  <link rel="stylesheet" href="https://technocrat.site//refounded//css/franklin.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/tufte.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/latex.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
+<link rel="icon" href="https://technocrat.site//refounded//assets/favicon.png">
 
    <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
@@ -22,28 +22,28 @@
 <div id="layout">
   <div id="menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/common/">Commonalities</a></li>
-      <li><a href="/concord/">Concordia</a></li>
-      <li><a href="/metro/">Metropolis</a></li>
-      <li><a href="/factor/">Factoria</a></li>
-      <li><a href="/lonestar/">The Lone Star Republic</a></li>
-      <li><a href="/dixie/">New Dixie</a></li>
-      <li><a href="/cumber/">Cumberland</a></li>
-      <li><a href="/heart/">Heartlandia</a></li>
-      <li><a href="/desert/">Deseret</a></li>
-      <li><a href="/sonora/">New Sonora</a></li>
-      <li><a href="/pacific/">Pacifica</a></li>
-      <li><a href="/alter/">Alternatives</a></li>
+      <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
+      <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
+      <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
+      <li><a href="https://technocrat.site/refounded/factor/">Factoria</a></li>
+      <li><a href="https://technocrat.site/refounded/lonestar/">The Lone Star Republi</a></li>
+      <li><a href="https://technocrat.site/refounded/dixie/">New Dixie</a></li>
+      <li><a href="https://technocrat.site/refounded/cumber/">Cumberland</a></li>
+      <li><a href="https://technocrat.site/refounded/heart/">Heartlandia</a></li>
+      <li><a href="https://technocrat.site/refounded/desert/">Deseret</a></li>
+      <li><a href="https://technocrat.site/refounded/sonora/">New Sonora</a></li>
+      <li><a href="https://technocrat.site/refounded/pacific/">Pacifica</a></li>
+      <li><a href="https://technocrat.site/refounded/alter/">Alternatives</a></li>
     </ul>
   </div>
-  <div id="main">
+<div id="main">
     
 
 
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="factoria"><a href="#factoria" class="header-anchor">Factoria</a></h1>
-<div class="marginnote"><img src="/img/factor.png" style="width: 100%; display: block;"></div>
+<div class="marginnote"><img src="https://technocrat.site/refounded/img/factor.png" style="width: 100%; display: block;"></div>
 
 <iframe 
 	src="https://njal.s3.us-west-2.amazonaws.com/Chicago.html" 
@@ -92,7 +92,7 @@
 	
 
 <p>Its combined population would make it the largest state in the existing union. Pennsylvania, Illinois and Ohio are already the fifth, sixth, seventh and eighth largest states. </p>
-<p><img src="/img/factoria_at_night.png" alt="Factoria at night" /></p>
+<p><img src="https://technocrat.site/refounded/img/factoria_at_night.png" alt="Factoria at night" /></p>
 <p>The following table shows the population of Factoria in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -193,8 +193,8 @@
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
 <p>Compared to the United States as a whole, Factoria, and each of its states, has an older population.</p>
-<p><img src="/img/Factoria_Age_Pyramid.png" alt="Factoria regional age pyramid" /></p>
-<p><img src="/img/Factoria_states_age_pyramids.png" alt="Factoria state age pyramids" /></p>
+<p><img src="https://technocrat.site/refounded/img/Factoria_Age_Pyramid.png" alt="Factoria regional age pyramid" /></p>
+<p><img src="https://technocrat.site/refounded/img/Factoria_states_age_pyramids.png" alt="Factoria state age pyramids" /></p>
 <p>The age distribution differences are reflected in the dependency ratios for the Factoria states.</p>
 
 <table class="tufte-table">
@@ -532,7 +532,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 16, 2025.
+     Richard Careaga. Last modified: March 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
