--- a/__site/heart/index.html
+++ b/__site/heart/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/css/franklin.css">
-<link rel="stylesheet" href="/css/tufte.css">
-<link rel="stylesheet" href="/css/latex.css">
-<link rel="stylesheet" href="/css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
-<link rel="icon" href="/assets/favicon.png">
+  <link rel="stylesheet" href="https://technocrat.site//refounded//css/franklin.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/tufte.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/latex.css">
+<link rel="stylesheet" href="https://technocrat.site//refounded//css/adjust.css"> <!-- sheet to overwrite some clashing styles -->
+<link rel="icon" href="https://technocrat.site//refounded//assets/favicon.png">
 
    <title>America Refounded</title>  
   <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
@@ -22,28 +22,28 @@
 <div id="layout">
   <div id="menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/common/">Commonalities</a></li>
-      <li><a href="/concord/">Concordia</a></li>
-      <li><a href="/metro/">Metropolis</a></li>
-      <li><a href="/factor/">Factoria</a></li>
-      <li><a href="/lonestar/">The Lone Star Republic</a></li>
-      <li><a href="/dixie/">New Dixie</a></li>
-      <li><a href="/cumber/">Cumberland</a></li>
-      <li><a href="/heart/">Heartlandia</a></li>
-      <li><a href="/desert/">Deseret</a></li>
-      <li><a href="/sonora/">New Sonora</a></li>
-      <li><a href="/pacific/">Pacifica</a></li>
-      <li><a href="/alter/">Alternatives</a></li>
+      <li><a href="https://technocrat.site/refounded/">Home</a></li>
+      <li><a href="https://technocrat.site/refounded/common/">Commonalities</a></li>
+      <li><a href="https://technocrat.site/refounded/concord/">Concordia</a></li>
+      <li><a href="https://technocrat.site/refounded/metro/">Metropolis</a></li>
+      <li><a href="https://technocrat.site/refounded/factor/">Factoria</a></li>
+      <li><a href="https://technocrat.site/refounded/lonestar/">The Lone Star Republi</a></li>
+      <li><a href="https://technocrat.site/refounded/dixie/">New Dixie</a></li>
+      <li><a href="https://technocrat.site/refounded/cumber/">Cumberland</a></li>
+      <li><a href="https://technocrat.site/refounded/heart/">Heartlandia</a></li>
+      <li><a href="https://technocrat.site/refounded/desert/">Deseret</a></li>
+      <li><a href="https://technocrat.site/refounded/sonora/">New Sonora</a></li>
+      <li><a href="https://technocrat.site/refounded/pacific/">Pacifica</a></li>
+      <li><a href="https://technocrat.site/refounded/alter/">Alternatives</a></li>
     </ul>
   </div>
-  <div id="main">
+<div id="main">
     
 
 
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="heartlandia"><a href="#heartlandia" class="header-anchor">Heartlandia</a></h1>
-<div class="marginnote"><img src="/img/heart.png" style="width: 100%; display: block;"></div>
+<div class="marginnote"><img src="https://technocrat.site/refounded/img/heart.png" style="width: 100%; display: block;"></div>
 
 <iframe 
 	src="https://njal.s3.us-west-2.amazonaws.com/Minneapolis.html" 
@@ -95,7 +95,7 @@
 	
 
 <p>Its largest state, Missouri, has a population between Wisconsin and Maryland, and its smallest state, North Dakota, has a size between Alaska and South Dakota. As a single state, it would rank just behind Florida, displacing New York from the fourth place.</p>
-<p><img src="/img/heartland_at_night.png" alt="Heartlandia at night" /></p>
+<p><img src="https://technocrat.site/refounded/img/heartland_at_night.png" alt="Heartlandia at night" /></p>
 <p>The following table shows the population of Heartlandia in relation to the European Union member states.</p>
 
 <table class="tufte-table">
@@ -196,8 +196,8 @@
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
 <p>Compared to the United States as a whole, Heartlandia has a younger population, although that varies by state.</p>
-<p><img src="/img/Heartlandia_Age_Pyramid.png" alt="Heartlandia regional age pyramid" /></p>
-<p><img src="/img/Heartlandia_states_age_pyramids.png" alt="Heartlandia state age pyramids" /></p>
+<p><img src="https://technocrat.site/refounded/img/Heartlandia_Age_Pyramid.png" alt="Heartlandia regional age pyramid" /></p>
+<p><img src="https://technocrat.site/refounded/img/Heartlandia_states_age_pyramids.png" alt="Heartlandia state age pyramids" /></p>
 <p>The age distribution differences are reflected in the dependency ratios for the  Concordia states.</p>
 
 <table class="tufte-table">
@@ -540,7 +540,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 13, 2025.
+     Richard Careaga. Last modified: March 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
